fix: stop images from overflowing

--- a/sass/article.scss
+++ b/sass/article.scss
@@ -45,3 +45,7 @@ article {
         }
     }
 }
+
+img {
+    max-width: 100%;
+}
